# kin_kin_vpn

./: .dockerignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 20251206_add_balance_field_to_users.py  20251206_add_balance_transactions.py  20251207_amount_decimal_refactor.py  a876aa47475f_initial.py
src/: main.py
src/bot/keyboards/: devices.py  menu.py
src/bot/navigation/: stack.py
src/bot/routers/: devices.py  menu.py  payments.py  referrals.py  start.py
src/bot/views/: menu.py
src/db/: connection.py  models.py
src/db/repos/: payments.py  users.py
src/middlewares/: db_session.py
src/services/: devices.py  payments.py  referrals.py  users.py
src/services/payments_providers/: __init__.py  card.py  sbp.py
