[project]
name = "kin_kin_vpn"
version = "0.1.0"
description = ""

authors = [
    {name = "a.krinkin"}
]
requires-python = ">=3.11"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "asyncpg (>=0.29.0,<1.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "SQLAlchemy[asyncio] (>=2.0.44,<3.0.0)",
    "greenlet (>=3.0.0,<4.0.0)",

]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.7"


[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "Q"]

ignore = ["E501"]

